--- a/landing/CSS/login_style.css
+++ b/landing/CSS/login_style.css
@@ -9,46 +9,53 @@
 }
 
 header {
-    position : fixed;
-    width : 100%;
-    height : 70px;
-    background-color : white;
-    z-index: 1;
+    position: fixed;
+    width: 100%;
+    height: 70px;
+    background-color: white;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    z-index: 1000;
 }
 
 .navtitle {
-    font-family : 'Merriweather', serif;
-    font-size : 1.25em;
-    display : inline-block;
-    margin-top : 27px;
-    margin-left : 14%;
+    display: inline-block;
+    font-family: 'Merriweather', serif;
+    font-size: 1.25em;
 }
 
 nav {
-    font-size : 1em;
-    float : right;
-    margin-top : 25px;
-    margin-right : 14%;
+    font-size: 1em;
+    min-width: 300px;
+    width: 585px;
 }
 
-nav a {
-    font-family : 'Open Sans', serif;
-    text-decoration : none;
-    color : black;
+nav ul {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
 }
 
-nav a:hover {
-    color : #707070;
+nav .menulink {
+    cursor: pointer;
+    text-decoration: none;
+    color: black;
+    font-family: 'Open Sans', serif;
 }
 
-nav li {
-    display : inline;
-    box-sizing : border-box;
-    padding : 0 30px;
+nav .menulink:hover {
+    color: #707070;
+}
+
+nav .menu {
+    display: inline;
+    box-sizing: border-box;
 }
 
 nav .current {
-    color : blue;
+    color: blue;
 }
 
 main {
@@ -217,6 +224,7 @@ button:hover {
     position: absolute;
     right: 40px;
     bottom: 110px;
+    perspective: 500px;
 }
 
 .forgot .forgotp {
@@ -362,20 +370,22 @@ lable.signlable {
 @keyframes passformin {
     0% {
         left: 120%;
+        transform: scale(0.1);
     }
     100% {
         left: 50%;
+        transform: scale(1);
     }
 }
 
 @keyframes passformout {
     0% {
-        opacity: 1;
+        transform: scale(1);
         left: 0%;
     }
     100% {
         left: -110%;
-        opacity: 0;
+        transform: scale(0.1);
     }
 }
 
@@ -386,6 +396,7 @@ lable.signlable {
     100% {
         opacity: 0;
         transform: translateY(50px);
+        /* transform: translateY(50px); */
     }
 }
 
@@ -408,6 +419,7 @@ lable.signlable {
 
 .passwrapper {
     height: 60px;
+    width: 100%;
     overflow: hidden;
     position: relative;
 }
