--- a/landing/CSS/about_style.css
+++ b/landing/CSS/about_style.css
@@ -101,9 +101,11 @@ section.ourtimeline {
 	width: 3px;
 	height: 100%;
 	background: #a3a3a3;
+	margin-left: -1.5px;
 	left: 50%;
 	top: 7px;
 	position: absolute;
+	z-index: 0;
 }
 
 .timelinecontainer:after {
@@ -128,7 +130,7 @@ section.ourtimeline {
 	top: 7px;
 	left: 100%;
 	border-radius: 50%;
-	margin-left: -8.5px;
+	margin-left: -10px;
 }
 
 .timelinecontainer .timelineitem .timelinecontent {
@@ -151,20 +153,20 @@ section.ourtimeline {
 	background-color: #F16876;
 }
 
-.timelinecontainer .timelineitem.first:before {
-	content: '2017';
+.timeline .seventeen {
 	font-size: 1em;
 	text-align: center;
 	line-height: 2.5em;
 	color: white;
+	display: block;
 	width: 40px;
 	height: 40px;
+	left: 50%;
+	margin-left: -20px;
 	border-radius: 50%;
 	background-color: #C1CFF8;
 	position: absolute;
-	left: 100%;
-	top: -55px;
-	margin-left: -18.5px;
+	z-index: 1;
 }
 
 .timelinecontainer .timelineitem:nth-child(1) {
@@ -181,7 +183,7 @@ section.ourtimeline {
 
 .timelinecontainer .timelineitem.inverted .timelineicon {
 	left: 0%;
-	margin-left: -8.5px;
+	margin-left: -10px;
 }
 
 .timelinecontainer .timelineitem .timelinecontent h2 {
