--- a/landing/CSS/login_style.css
+++ b/landing/CSS/login_style.css
@@ -63,7 +63,7 @@ main {
 }
 
 body {
-    background-color : rgba(201, 219, 225, 0.3);
+    background-color: rgba(201, 219, 225, 0.3);
     position: relative;
     z-index: 0;
 }
@@ -119,16 +119,16 @@ body {
     background-color : white;
     box-shadow : 0 4px 10px 4px rgba(19, 35, 47, 0.3);
     position: relative;
-    transition: all 300ms;
-    max-height: 550px;
+    transition: all 300ms ease-in-out;
+    max-height: 521px;
 }
 
 .sign {
-    height: 424px;
+    height: 426px;
 }
 
 .login {
-    height: 272px;
+    height: 274px;
     position: relative;
 }
 
@@ -157,15 +157,12 @@ input:focus {
 }
 
 .lengthfivetwoone {
-    animation: lengthone 500ms ease-in-out forwards;
+    animation: lengthone 400ms ease-in-out forwards;
 }
 
 @keyframes lengthone {
     0% {
         height: 95px;
-    }
-    50% {
-        height: 550px;
     }
     100% {
         height: 521px;
@@ -180,11 +177,8 @@ input:focus {
     0% {
         height: 95px;
     }
-    50% {
-        height: 400px;
-    }
     100% {
-        height: 369px;
+        height: 367px;
     }
 }
 
@@ -231,12 +225,12 @@ button:hover {
 }
 
 .forgot .forgotp {
-    text-decoration : none;
-    color : black;
+    text-decoration: none;
+    color: black;
 }
 
 .forgot .forgotp:hover {
-    color : green;
+    color: #1D9D74;
 }
 
 #signup {
@@ -262,12 +256,12 @@ button:hover {
     width: 100%;
     float: left;
     margin-top: -30px;
-    color: orangered;
+    color: #ff4500;
 }
 
 .errortxtpass {
     position: absolute;
-    color: orangered;
+    color: #ff4500;
     font-family : 'Lato', sans-serif;
     font-size : 0.7em;
     top: 95%;
@@ -492,8 +486,9 @@ lable.signlable {
 }
 
 footer {
-    width : 100%;
-    height : auto;
-    border-top : 1px outset black;
-    background-color : white;
+    width: 100%;
+    height: auto;
+    border-top: 1px outset #929292;
+    background-color: #fff;
+    box-shadow: 0px 500px 0px 500px #fff;
 }
