--- a/landing/CSS/index_style.css
+++ b/landing/CSS/index_style.css
@@ -28,7 +28,8 @@ header {
 nav {
 	font-size: 1em;
 	min-width: 300px;
-	width: 585px;
+	width: 100%;
+	max-width: 585px;
 }
 
 nav ul {
@@ -235,7 +236,7 @@ p {
 .divisionwrapper {
 	display: inline-block;
 	width: 100%;
-	background-color: #e8ecf8;
+	background-color: rgba(201, 219, 225, 0.3);
 }
 
 .contact {
@@ -355,6 +356,6 @@ footer {
 	width: 100%;
 	height: 70px;
 	border-top: 1px solid #929292;
-	background-color: white;
+	background-color: #fff;
 	margin-top: -4px;
 }
