--- a/landing/CSS/userpage_style.css
+++ b/landing/CSS/userpage_style.css
@@ -13,22 +13,54 @@ header {
 	width: 100%;
 	height: 70px;
 	position: fixed;
-	z-index: 2;
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+}
+
+.headerwrap {
+	max-width: 1036.8px;
+	width: 1036.8px;
+	height: 100%;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
 }
 
 .navtitle {
-	margin-left: 14%;
 	display: inline-block;
-	margin-top: 27px;
 	font-size: 1.25em;
 	font-family: 'Merriweather', serif;
 }
 
 nav {
-	float: right;
-	margin-right: 14%;
-	margin-top: 25px;
 	font-size: 1em;
+}
+
+nav ul {
+	box-sizing: border-box;
+	display: flex;
+	justify-content: space-between;
+	width: 300px;
+	max-width: 300px;
+	list-style: none;
+}
+
+nav .lastmenu {
+	display: inline;
+	box-sizing: border-box;
+}
+
+nav .lastmenulink {
+	color: black;
+}
+
+nav .lastmenulink i{
+	margin-top: 3px;
+}
+
+nav .lastmenulink:hover {
+	color: #707070;
 }
 
 nav .menulink {
@@ -42,65 +74,56 @@ nav .menulink:hover {
 	color: #707070;
 }
 
-nav .lastmenu {
-	display: inline;
-	padding-left: 30px;
-	box-sizing: border-box;
-}
-
-nav .lastmenulink {
-	color: black;
-}
-
-nav .lastmenulink:hover {
-	color: #707070;
-}
-
-nav .menu {
-	display: inline;
-	padding: 0 30px;
-	box-sizing: border-box;
-}
-
-.logout {
-	position: absolute;
-	display: inline-block;
-	height: 16px;
-	width: 16px;
-	margin-top: 2.3px;
-}
-
 nav .current {
 	color: blue;
 }
 
 main {
 	padding-top: 100px;
-	margin-left: 14%;
-	margin-right: 14%;
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.userpagecontent {
+	max-width: 1036.8px;
+	width: 100%;
 }
 
 body {
 	background-color: rgba(201, 219, 225, 0.3);
+	background-image: url(../IMG/absurdity.png);
+}
+
+.maintabs {
+	width: 55%;
+}
+
+.maincontentwrapper {
+	display: flex;
+	justify-content: space-between;
+	align-items: flex-start;
+	height: auto;
 }
 
 .maincontent {
 	border-top: 1px solid rgb(241, 104, 118);
 	background-color: white;
-	width: 55%;
+	width: 100%;
 	float: left;
 	box-shadow: 2px 4px 20px rgba(19, 35, 47, 0.3);
-	float: left;
 	clear: left;
 	height: 100%;
 }
 
+.usernav ul{
+	display: flex;
+	justify-content: flex-start;
+}
+
 .usernav li {
-	display: inline-flex;
-	margin: 0;
-	padding: 0;
-	float: left;
-	clear: right;
+	display: inline-block;
 }
 
 .usernav .tabusr {
@@ -147,12 +170,11 @@ body {
 .userinfo {
 	margin-bottom: 30px;
 	border-bottom: 1px solid #95989A;
-}
-
-.userinfo p {
-	display: inline-block;
-	box-sizing: border-box;
-	width: 49.8%;
+	max-width: 1036.8px;
+	width: 100%;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
 	color: #95989A;
 }
 
@@ -417,21 +439,18 @@ button:hover {
 }
 
 .boxes {
-	float: right;
 	width: 40%;
-	margin-left: 5%;
-	margin-top: -30px;
-}
-
-.divisor {
-	height: 40px;
-	display: block;
-	width: 100%;
+	height: 479px;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
 }
 
 .box {
 	box-sizing: border-box;
 	box-shadow: 2px 4px 20px rgba(19, 35, 47, 0.3);
+	height: 227px;
+	width: 100%;
 }
 
 .box h2 {
@@ -451,23 +470,21 @@ button:hover {
 	font-family: 'Lato', sans-serif;
 }
 
-.boxcontent .sub {
-	display: inline-block;
-	width: 49.45%;
-}
-
 .boxcontent .title {
 	font-size: 1.4em;
 }
 
 .boxcontent .para {
 	line-height: 1.4em;
-	text-align: right;
 	font-size: 1em;
 }
 
 .boxcontent .boxtop {
 	margin-bottom: 18px;
+	height: 28.2px;
+	display: flex;
+	justify-content: space-between;
+	align-items: flex-end;
 }
 
 .progresspara {
@@ -492,34 +509,33 @@ button:hover {
 .donate {
 	display: inline-block;
 	width: 49.45%;
-	height: 20px;
+	display: inline-flex;
+	justify-content: flex-end;
 }
 
 .donate input {
 	border: 1px solid rgb(241, 104, 118);
-	padding: 2px;
+	padding: 3px;
 	font-size: 0.9em;
 	font-family: 'Lato', sans-serif;
 	width: 60%;
+	box-sizing: border-box;
 }
 
 .donate button {
-	padding: 2px;
 	font-size: 0.9em;
 	background-color: rgb(241, 104, 118);
 	color: white;
 	cursor: pointer;
 	font-family: 'Lato', sans-serif;
 	width: 30%;
+	text-align: center;
+	line-height: 0.9em;
 	transition: all 0.3s ease;
 }
 
 .donate button:hover {
 	background-color: rgb(236, 58, 76);
-}
-
-.donate input, button {
-	display: inline-block;
 }
 
 #settings {
@@ -564,10 +580,6 @@ button:hover {
 
 #datetitle, #yeartitle {
 	margin-bottom: 1px;
-}
-
-.sitecontent {
-	overflow: hidden;
 }
 
 .dropdown {
@@ -650,43 +662,143 @@ button:hover {
 	margin-bottom: 6px;
 }
 
+.achievementswrapper {
+	display: flex;
+	justify-content: space-between;
+	align-items: stretch;
+	height: 100%;
+}
+
 .numbers {
 	font-family: 'Lato', sans-serif;
-	padding-left: 30%;
+	width: 14%;
+	border-right: 1px solid #666;
+	box-sizing: border-box;
+}
+
+.badges {
+	width: 80%;
+	box-sizing: border-box;
+	display: inline-flex;
+	justify-content: flex-start;
+	align-items: flex-start;
+	flex-wrap: wrap;
+}
+
+.badges .badgewrapper {
+	width: 80px;
+	height: 79px;
+	margin-right: 20px;
+	margin-bottom: 20px;
+	border-radius: 50%;
+	position: relative;
+}
+
+.badges .badgewrapper img {
+	position: absolute;
+	border-radius: 50%;
+	width: 50px;
+	height: 50px;
+	z-index: 1;
+	top: 5px;
+	left: 15px;
+}
+
+.badges .badgewrapper span {
+	font-family : 'Lato', sans-serif;
+	font-size: 0.8em;
+	display: block;
+	text-align: center;
+	color: #333;
+	margin-top: 3px;
+}
+
+.badges .badgewrapper .achievtooltip {
+	background-color: rgba(0, 0, 0, 0.7);
+	color: #fff;
+	padding: 10px;
+	font-family : 'Lato', sans-serif;
+	width: 165%;
+	position: absolute;
+	display: none;
+	z-index: 5;
+}
+
+.badges .badgewrapper .achievtooltip:before {
+	content: '';
+	border-bottom: 10px solid rgba(0, 0, 0, 0.7);
+	border-top: 10px solid transparent;
+	border-left: 10px solid transparent;
+	border-right: 10px solid transparent;
+	width: 0;
+	height: 0;
+	position: absolute;
+	top: -20px;
+	left: calc(50% - 5px);
+}
+
+.badges .badgewrapper .achievtooltip h4 {
+	font-size: 0.8em;
+	font-weight: 400;
+}
+
+.badges .badgewrapper .achievtooltip p {
+	font-size: 0.7em;
+}
+
+.radial {
+    background-color: #F2F2F2;
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    position: relative;
+    z-index: 1;
+    margin-left: 10px;
+}
+
+.radial .circle .mask .fill {
+	position: absolute;
+    background-color: #1D9D74;
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    clip: rect(0px, 30px, 60px, 0px);
+    transition: all 1s;
+}
+
+.radial .circle .mask {
+	position: absolute;
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    clip: rect(0px, 60px, 60px, 30px);
+    transition: all 1s;
 }
 
 .donatedrow {
 	box-sizing: border-box;
 	display: inline-block;
+	color: #333;
 }
 
-.donatedrow:not(:last-child) {
-	padding-right: 15%;
+.donatedrow:first-child {
+	margin-bottom: 10px;
 }
 
 .donatedrow .donated {
 	display: block;
-	font-size: 0.95em;
-	color: black;
+	font-size: 0.8em;
 }
 
-.donatedrow .timer {
-	display: inline-block;
-	color: black;
-	font-size: 1.25em;
-}
-
-.donatedrow .dollar {
-	display: inline-block;
-	color: black;
-	font-size: 1.5em;
+.donatedrow .doanteddollar {
+	font-size: 1.1em;
 }
 
 .errortxt {
 	font-family : 'Lato', sans-serif;
     font-size : 0.7em;
     width: 100%;
-    color: orangered;
+    color: #ff4500;
     position: absolute;
     margin-top: -18px;
 }
@@ -695,7 +807,7 @@ button:hover {
 	font-family : 'Lato', sans-serif;
     font-size : 0.7em;
     width: 100%;
-    color: orangered;
+    color: #ff4500;
     position: absolute;
     bottom: -13px;
     left: 2px;
@@ -705,7 +817,7 @@ button:hover {
 	font-family : 'Lato', sans-serif;
     font-size : 0.7em;
     width: 100%;
-    color: orangered;
+    color: #ff4500;
     position: absolute;
     top: 29px;
     left: 2px;
